--- a/proiectWeb/css/login.css
+++ b/proiectWeb/css/login.css
@@ -96,3 +96,31 @@ body {
   text-decoration: none;
   text-transform: uppercase;
 }
+
+.login{
+  background-color: transparent;
+  border-radius:20px;
+  border: none;
+  padding: 0.2rem;
+  transition: 0.3s ease;
+}
+.login:hover{
+  background-color: var(--c4);
+  color: white;
+}
+
+.sign-box {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end; 
+  color: white;
+}
+
+.logref{
+  text-decoration: none;
+  color: black;
+  transition: 0.5s;
+}
+.logref:hover{
+  color:#C38D9E;
+}
