--- a/proiectWeb/css/afterlog.css
+++ b/proiectWeb/css/afterlog.css
@@ -34,6 +34,7 @@ body {
 }
 
 .titlu {
+    text-decoration: none;
     margin: 0;
     text-align: center;
     color: white;
@@ -61,6 +62,50 @@ body {
     background-color: var(--c1);
     transition: 1s;
     color: white;
+}
+
+.menu {
+    margin-top: 20px;
+}
+
+.menu ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+}
+
+.menu ul li {
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+.menu ul li a {
+    text-decoration: none;
+    color: #333;
+    padding: 10px 15px;
+    transition: background-color 0.3s ease;
+}
+
+.menu ul li a:hover {
+    background-color: #f0f0f0;
+    border-radius: 5px;
+}
+
+.menu-toggle {
+    display: none;
+    cursor: pointer;
+}
+
+.menu-toggle span {
+    display: block;
+    width: 25px;
+    height: 3px;
+    background-color: #333;
+    margin-bottom: 5px;
+    transition: transform 0.3s ease;
 }
 
 @keyframes spin {
@@ -179,6 +224,48 @@ body {
     .titlu {
         font-size: 2rem;
     }
+
+    .menu ul {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        background-color: #f0f0f0;
+        padding: 20px;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        max-height: calc(100vh - 100%);
+        /* Set a maximum height based on the viewport height */
+        overflow-y: scroll;
+        /* Enable vertical scrolling */
+
+    }
+
+    .menu ul li {
+        margin: 10px 0;
+    }
+
+    .menu-toggle {
+        display: block;
+    }
+
+    .menu-toggle.active span:nth-child(1) {
+        transform: rotate(45deg) translate(6px, 6px);
+    }
+
+    .menu-toggle.active span:nth-child(2) {
+        opacity: 0;
+    }
+
+    .menu-toggle.active span:nth-child(3) {
+        transform: rotate(-45deg) translate(5.5px, -5px);
+    }
+
+    .menu.active ul {
+        display: flex;
+    }
+
 }
 
 @media (max-width: 480px) {
@@ -193,4 +280,5 @@ body {
     .post {
         width: 100%;
     }
+
 }
