--- a/proiectWeb/css/companies.css
+++ b/proiectWeb/css/companies.css
@@ -107,6 +107,11 @@ body {
     transition: transform 0.3s ease;
 }
 
+.ref1,
+.ref2 {
+    display: none;
+}
+
 @keyframes spin {
     100% {
         transform: rotateY(360deg);
@@ -161,7 +166,7 @@ body {
     border-radius: 10px;
 }
 
-.content p{
+.content p {
     max-width: 60em;
 }
 
@@ -274,6 +279,10 @@ body {
         display: flex;
     }
 
+    .ref1,
+    .ref2 {
+        display: block;
+    }
 }
 
 @media (max-width: 480px) {
@@ -292,25 +301,26 @@ body {
 
 }
 
-h1{
+h1 {
     color: var(--c5)
 }
 
-h2{
+h2 {
     color: var(--c5)
 }
 
-h3{
+h3 {
     color: var(--c1);
     text-align: left;
 }
 
-h4{
+h4 {
     color: var(--c3);
     text-align: left;
 }
 
-ol, ul{
+ol,
+ul {
     text-align: left;
     align-items: center;
 }
@@ -328,9 +338,9 @@ ol, ul{
 }
 
 .filter-option select {
-    
+
     color: var(--c4);
-    border: none; 
+    border: none;
     padding: 5px 10px;
     border-radius: 10px;
 }
@@ -358,7 +368,7 @@ ol, ul{
 }
 
 .company img {
-    width: 100%; 
+    width: 100%;
     height: auto;
     max-height: 200px;
 }
