--- a/tw/public/Contents/css/post.css
+++ b/tw/public/Contents/css/post.css
@@ -116,6 +116,7 @@ h1 {
 
 .formular {
     display: flex;
+    flex-direction: column;
 }
 
 .content-box {
@@ -123,7 +124,7 @@ h1 {
     margin-right: 20px;
 }
 
-.post-button {
+.button {
     border: none;
     background-color: transparent;
     letter-spacing: 1px;
